# AdventOfCode25

./: .gitignore
day1_python/: part_1.py  part_2.py
day2_ruby/: part1.rb  part2.rb
day3_c++/include/: part1.hpp  part2.hpp
day3_c++/src/: part1.cpp  part2.cpp
day4_ts/: package-lock.json  package.json  tsconfig.json
day4_ts/src/: part1.ts  part2.ts
day5_c++/: CMakeLists.txt
day5_c++/include/: part1.hpp  part2.hpp
day5_c++/src/: part1.cpp  part2.cpp
day6_dart/: part1.dart  part2.dart
day7_ts/: package-lock.json  package.json
day7_ts/src/: part1.ts
